# LJGL-EXAMPLE

./: .gitmodules  CMakeLists.txt  README.md
LJGL-EXAMPLE-PROGRAM/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  main.cpp  normalSuzanne.ebo  normalSuzanne.vbo  suzanneLOW.ebo  suzanneLOW.vbo
example/GLSL/: shader.frag.glsl  shader.vert.glsl
example1/: CMakeLists.txt
example2/: CMakeLists.txt  main.cpp
example2/GLSL/: shader.frag.glsl  shader.vert.glsl
